<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dip"
    android:layout_marginRight="8dip"
    android:layout_marginTop="15dip"
    android:layout_marginBottom="15dip"
    >
   <Button
      android:id="@+id/delete_layout_delete_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:background="@drawable/button_uneable_drawable"
      android:layout_weight="1"
      android:text="@string/delete"
      android:textSize="@dimen/font_size_normal"
      android:textColor="@color/delete_layout_button_normal_color"
   />
    <Button
        android:id="@+id/delete_layout_clear_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/button_uneable_drawable"
        android:layout_weight="1"
        android:text="@string/clear"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:textSize="@dimen/font_size_normal"
        android:textColor="@color/delete_layout_button_normal_color"
        />
    <Button
        android:id="@+id/delete_layout_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/button_uneable_drawable"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:textSize="@dimen/font_size_normal"
        android:textColor="@color/delete_layout_button_normal_color"
        />
</LinearLayout>