<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dip"
    android:background="@color/bottom_tab_bar_bg"
    android:paddingLeft="24dip"
    android:paddingRight="24dip"
    >
   <LinearLayout
       android:id="@+id/tab_bar_left_layout"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_alignParentLeft="true"
       >
       <ImageView
           android:id="@+id/tab_bar_left_imageview"
           android:layout_width="20dip"
           android:layout_height="24dip"
           android:scaleType="centerInside"
           android:src="@drawable/program_manage"
           />
        <TextView
            android:id="@+id/tab_bar_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/program_manage"
         />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_bar_right_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentRight="true"
        >
        <ImageView
            android:id="@+id/tab_bar_right_imageview"
            android:layout_width="20dip"
            android:layout_height="24dip"
            android:scaleType="centerInside"
            android:src="@drawable/message"
            />
        <TextView
            android:id="@+id/tab_bar_right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/private_messgae_comment"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toLeftOf="@id/tab_bar_right_layout"
        android:layout_toRightOf="@id/tab_bar_left_layout"
        >
        <LinearLayout
            android:id="@+id/tab_bar_middle_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentRight="true"
            >
            <ImageView
                android:id="@+id/tab_bar_middle_imageview"
                android:layout_width="20dip"
                android:layout_height="24dip"
                android:scaleType="centerInside"
                android:src="@drawable/program_sale"
                />
            <TextView
                android:id="@+id/tab_bar_middle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/prouduct_sale"
                />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>