<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    >
   <view
     android:id="@+id/activity_search_product_search_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     class="com.zhubo.control.activity.common.SearchBar"
    />
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#dedede"
        />
    <RelativeLayout
       android:id="@+id/activity_search_all_product_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="21dip"
       android:paddingBottom="21dip"
       android:paddingLeft="17dip"
       android:paddingRight="17dip"
    >
      <ImageView
          android:id="@+id/activity_search_all_product_img"
          android:layout_width="20dip"
          android:layout_height="20dip"
          android:scaleType="centerInside"
          android:src="@drawable/search_indicator1"
          android:layout_alignParentLeft="true"
          android:layout_centerVertical="true"
       />
       <ImageView
           android:id="@+id/activity_search_all_product_right_img"
           android:layout_width="9dip"
           android:layout_height="13.5dip"
           android:scaleType="centerInside"
           android:src="@drawable/gray_right_arrow"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
        />
        <TextView
           android:id="@+id/activity_search_all_product_label"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="#333333"
           android:textSize="@dimen/font_size_large"
           android:layout_toLeftOf="@id/activity_search_all_product_right_img"
           android:layout_toRightOf="@id/activity_search_all_product_img"
           android:singleLine="true"
           android:ellipsize="end"
           android:paddingLeft="12dp"
           android:paddingRight="12dp"
           android:gravity="center_vertical"
           android:text="@string/all_product"
         />
    </RelativeLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#dedede"
     />
    <RelativeLayout
        android:id="@+id/activity_search_choose_prouct_recently_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dip"
        android:paddingBottom="21dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        >
        <ImageView
            android:id="@+id/activity_search_choose_prouct_recently_img"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:scaleType="centerInside"
            android:src="@drawable/search_indicator2"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/activity_search_choose_prouct_recently_right_img"
            android:layout_width="9dip"
            android:layout_height="13.5dip"
            android:scaleType="centerInside"
            android:src="@drawable/gray_right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/activity_search_choose_prouct_recently_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="@dimen/font_size_large"
            android:layout_toLeftOf="@id/activity_search_choose_prouct_recently_right_img"
            android:layout_toRightOf="@id/activity_search_choose_prouct_recently_img"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:text="@string/choose_product_recently"
            />
    </RelativeLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#dedede"
        />
    <RelativeLayout
        android:id="@+id/activity_search_popular_product_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dip"
        android:paddingBottom="21dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        >
        <ImageView
            android:id="@+id/activity_search_popular_product_img"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:scaleType="centerInside"
            android:src="@drawable/search_indicator3"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/activity_search_popular_product_right_img"
            android:layout_width="9dip"
            android:layout_height="13.5dip"
            android:scaleType="centerInside"
            android:src="@drawable/gray_right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/activity_search_popular_product_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="@dimen/font_size_large"
            android:layout_toLeftOf="@id/activity_search_popular_product_right_img"
            android:layout_toRightOf="@id/activity_search_popular_product_img"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:text="@string/popular_product"
            />
    </RelativeLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#dedede"
        />
    <RelativeLayout
        android:id="@+id/activity_search_collect_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dip"
        android:paddingBottom="21dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/activity_search_collect_img"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:scaleType="centerInside"
            android:src="@drawable/search_indicator4"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/activity_search_collect_right_img"
            android:layout_width="9dip"
            android:layout_height="13.5dip"
            android:scaleType="centerInside"
            android:src="@drawable/gray_right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/activity_search_collect_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="@dimen/font_size_large"
            android:layout_toLeftOf="@id/activity_search_collect_right_img"
            android:layout_toRightOf="@id/activity_search_collect_img"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:text="@string/collect"
            />
    </RelativeLayout>
</LinearLayout>